make slight tweaks to slide deck; add PDF of draft

--- a/furman_workshop.tex
+++ b/furman_workshop.tex
@@ -1,11 +1,11 @@
-\documentclass[aspectratio=1610]{beamer}
+\documentclass[aspectratio = 1610]{beamer}
 \usepackage[utf8]{inputenc}
 \usepackage[mmddyyyy]{datetime}
 \definecolor{seafoam}{HTML}{099999}
 \definecolor{oxfordblue}{HTML}{203769}
 \definecolor{gray}{HTML}{4a4545}
 \usecolortheme[named = gray]{structure}
-\setbeamercolor{normal text}{fg=gray}
+\setbeamercolor{normal text}{fg = gray}
 \setbeamertemplate{itemize item}[square]
 \setbeamertemplate{itemize item}[diamond]
 \setbeamertemplate{caption}{\insertcaption}
@@ -54,10 +54,15 @@
 \begin{minipage}{.5\textwidth}
 \includegraphics[scale = 0.35]{SN_98056114_drawing}
 \includegraphics[scale = 0.35]{SN_98056114_specimen}
-\end{minipage}% This must go next to `\end{minipage}`
+\end{minipage}%
 \begin{minipage}{.5\textwidth}
 
+\tiny
+
+SN 98056114 - 29 design search codes:\par\medskip
+
 \begin{itemize}
+
 \TINY
 
 \item 01.01.10 - Stars, three or more; Three or more stars
@@ -90,12 +95,6 @@
 \item 26.17.12 - Angles (geometric); Chevrons
 \item 26.17.25 - Other lines, bands or bars
 
-\medskip
-
-\tiny
-
-(29 design search codes)
-
 \end{itemize}
 \end{minipage}
 
@@ -106,11 +105,13 @@
 \begin{minipage}{.5\textwidth}
 \includegraphics[scale = 0.35]{RN_5139501_drawing}
 \includegraphics[scale = 0.2]{RN_5139501_specimen}
-\end{minipage}% This must go next to `\end{minipage}`
+\end{minipage}%
 \begin{minipage}{.5\textwidth}
+\tiny
+
+RN 5139501 - 7 design search codes:\par\bigskip
 
 \begin{itemize}
-\tiny
 
 \item 09.09.04 - Fasteners, snaps; Snaps (clothing)
 \item 14.11.08 - Locks; Locks and key holes; padlocks; combination locks; Locks, combination; Padlocks
@@ -121,8 +122,6 @@
 \item 26.11.28 - Miscellaneous designs with overall rectangular shape; Rectangular shapes (miscellaneous overall shape)
 
 \medskip
-
-(7 design search codes)
 
 \end{itemize}
 \end{minipage}
