add linear regression that controls for number of marks with design codes per year

--- a/the_new_trademark_complexity.tex
+++ b/the_new_trademark_complexity.tex
@@ -467,7 +467,22 @@ Indeed, the data suggest such a strategy could be effective. Fitting a regressio
 
 But this strategy doesn't explain everything. \textit{Seabrook} was decided in 1977, about a decade before the beginning of the time period examined in my empirical analysis. It doesn't take much trial-and-error to figure out that (1) \textit{Seabrook} effectively says that unusual nonword marks are likelier to be registered, and (2) one way to make a mark unusual is to add more things to that mark. Thus, one might expect that a strategy of packing visual elements into a mark would take off as soon as a few applicants realized it worked. And that strategy would then remain popular—that is, applicants would employ that strategy at roughly consistent rates—as long as the law remains the same.\footnote{Somewhat analogously, consider that there were pronounced increases (1) in applications for color marks after the Supreme Court's decision in \textit{Qualitex}, which held that colors could be marks upon a showing of secondary meaning, and (2) in LGBTQ+-oriented applications in the years immediately following the Supreme Court's decision in \textit{Matal v. Tam}, which struck down the Lanham Act's prior prohibition on the registration of ``disparag[ing]'' marks. \textit{Owning Colors}, \textit{supra} note~\ref{surpa23}, at [X]; Michael Goodyear, \textit{Queer Trademarks}, 2024 \textsc{U. Ill. L. Rev.} 163.} But that's not what we see at all. Instead, Figure~\ref{fig:7} shows that marks with the highest number of design search codes seem, first, to moderately \textit{decrease} as a percentage of total applications during the late '80s and early '90s, after which they pick up substantially. Although it's possible that this is the natural pattern by which applicants adopted a visual element–packing strategy, it seems likelier that other factors are at play.
 
-Context strongly suggests one such factor is the dramatic increase in total numbers of trademark filings in recent decades. [NTD: Include time series analysis of all applications/word applications vs. high code applications.] As overall trademark activity has grown, applicants have become more motivated to pursue highly complex nonword marks. [That relationship is particularly remarkable since, as mentioned, applications for \emph{word} marks have also grown as a share of all applications over the same time period, with nonword marks shrinking as a proportion of all applications.] In other words, as applicants file for word marks at increasingly elevated levels, they are also filing for highly complex nonword marks at increasingly elevated levels. As the next Section argues, one compelling way to understand this pattern is as the result of a fundamental shift in the branding environment—and, indeed, in the broader aesthetic environment. In particular, qualitative accounts of branding trends in recent years suggest that, as ever-growing numbers of word marks have saturated trademarks' linguistic territory, business have come to focus more on nonverbal branding elements as a way to distinguish themselves. In other words, as less and less of the domain of words is available to be claimed as a mark, businesses' focus on creating unique, memorable trademarks may intensifying within the domain of the visual, leading to a greater emphasis on claiming specific images, shapes, and patterns as marks.
+Context strongly suggests one such factor is the dramatic increase in total numbers of trademark filings in recent decade. As discussed, applications for word marks have driven that increase. But as applicants file for word marks at increasingly elevated levels, they are also filing for highly complex nonword marks at increasingly elevated levels. Figure~\ref{fig:8} gives an impressionistic sense of this trend by superimposing the yearly proportion of nonword marks with greater than 10 or greater than 15 codes over the yearly number of trademark applications.
+
+\addtocounter{figure}{-3}
+
+\begin{figure}[H]
+\centering
+\input{./graphics/figure_8.tex}
+\caption{\label{fig:12} Total applications filed at the USPTO (\textbf{\color{oxfordblue}left axes}) and share of those applications that are nonword with $>10$ and $>15$ codes (\textbf{\color{seafoam}right axes}) (1986 - 2023)}
+\end{figure}
+
+As the next Section discusses further, one compelling way to understand this pattern is as the result of a fundamental shift in the branding environment—and, indeed, in the broader aesthetic environment. In particular, qualitative accounts of branding trends in recent years suggest that, as ever-growing numbers of word marks have saturated trademarks' linguistic territory, business have come to focus more on nonverbal branding elements as a way to distinguish themselves. In other words, as less and less of the domain of words is available to be claimed as a mark, businesses' focus on creating unique, memorable trademarks may intensifying within the domain of the visual, leading to a greater emphasis on claiming specific images, shapes, and patterns as marks.
+
+It is not straightforward, however, to test this causal thesis. The yearly numbers of nonword trademarks, high-code marks, and all trademarks in general have each increased over time. So the correspondence among them does not necessarily reflect the effect of the increase in one type of filing on another type of filing. Rather, it reflects a general increase in filings. Nonetheless, other variables in the data may suggest a causal link between increased applications for word marks, on the one hand, and increased applications for high-code marks, on the other. First, if the growing depletion of good word marks were driving businesses to file for high-code marks, then we would expect that, in the classes of goods/services in which depletion is the highest, high-code marks have become more common. This is exactly what we find.
+
+Second, and relatedly, we might also expect that businesses that have filed a large amount of high-code marks are those that are particularly exposed to the risk of word-mark depletion. 
+
 
 \subsection{The New Trademark Complexity}\label{subsec:2C}
 
